--- a/CN-Lab/Lab03/.vscode/settings.json
+++ b/CN-Lab/Lab03/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
     "files.associations": {
         "array": "cpp",
-        "string_view": "cpp"
+        "string_view": "cpp",
+        "random": "cpp"
     }
 }
