--- a/OS-Lab/Lab04/CMakeLists.txt
+++ b/OS-Lab/Lab04/CMakeLists.txt
@@ -4,7 +4,12 @@ project(Lab04 VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
+
 add_executable(Lab04 main.cpp)
+
+target_link_libraries(Lab04 Threads::Threads)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
