--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 /Assignment-SEM05-2019/SIMULATION/RAIN_SIM/nbproject/private/
 /Assignment-SEM05-2019/SIMULATION/RAIN_SIM/build/
 /Assignment-SEM05-2019/SIMULATION/ATM_SIM/build/
+/SIM-Lab/Lab05/nbproject/private/
+/SIM-Lab/Lab05/build/
+/SIM-Lab/Lab07/nbproject/private/
+/SIM-Lab/Lab07/build/
