--- a/OS-Lab/Lab06/.vscode/settings.json
+++ b/OS-Lab/Lab06/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.associations": {
         "array": "cpp"
-    }
+    },
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
 }
