--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 /SIM-Lab/Practice/nbproject/private/
 /SIM-Lab/Practice/build/
 /SIM-Lab/Practice/dist/
+/SIM-Lab/KSTEST/nbproject/private/
+/SIM-Lab/KSTEST/build/
